# nt_client

./: Cargo.toml  README.md  build.rs
examples/: path.rs  property.rs  protobuf.rs  pubsub.rs  reconnect.rs  struct_data.rs
nt_client/: Cargo.toml
nt_client/examples/: generic_pub.rs  struct_data.rs  topiccollection.rs
nt_client/src/: data.rs  error.rs  lib.rs  math.rs  schema.rs  struct.rs  subscribe.rs  topic.rs
nt_client/src/protobuf/: geometry2d.proto  geometry3d.proto  system.proto  trajectory.proto  wpimath.proto
nt_client/src/struct/: byte.rs  parse.rs
nt_client_macros/: Cargo.toml
nt_client_macros/src/: lib.rs  proto.rs  struct.rs
src/: data.rs  lib.rs  math.rs  net.rs  protobuf.rs  publish.rs  struct.rs  subscribe.rs  topic.rs
src/data/: type.rs
src/protobuf/: controller.proto  kinematics.proto  plant.proto  spline.proto
src/struct/: parse.rs
src/topic/: collection.rs
