[package]
name = "nt_client"
version = "0.4.0"
edition = "2024"
description = "A blazingly fast NetworkTables 4.1 client"
repository = "https://github.com/DatAsianBoi123/nt_client"
license = "MIT"
keywords = ["wpi", "wpilib", "networktables", "NT"]
categories = ["api-bindings"]
build = "build.rs"

[lib]
name = "nt_client"
path = "src/lib.rs"

[features]
math = []
struct = []
protobuf = ["dep:protobuf", "dep:protobuf-codegen", "dep:protoc-bin-vendored"]
publish_bypass = []

[[example]]
name = "struct_data"
required-features = ["struct", "math"]

[[example]]
name = "protobuf"
required-features = ["protobuf", "math"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
rand = "0.9"
rmp-serde = "1.3"
rmpv = { version = "1.3", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
tracing = "0.1"

protobuf = { version = "3", optional = true }

[build-dependencies]
protobuf-codegen = { version = "3", optional = true }
protoc-bin-vendored = { version = "3", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
tokio-test = "0.4"
lazy_static = "1.5.0"

